[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwv"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pyyaml",
]
requires-python = ">=3.9"

[project.scripts]
gwv = "gwv.gwv:main"

[tool.hatch.version]
path = "gwv/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/gwv",
    "/bdat",
]

[tool.hatch.build.hooks.custom]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "ruff>=0.11.6",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]
